# bw-reducing-solver

./: CMakeLists.txt  ExprSimplifier.cpp  ExprSimplifier.h  FormulaReducer.cpp  FormulaReducer.h  FormulaStats.cpp  FormulaStats.h  FormulaTraverser.h  SMTLIBInterpreter.cpp  SMTLIBInterpreter.h  Solver.cpp  Solver.h  main.cpp
cmake/: ExternalAntlr4Cpp.cmake
tests/: main.cpp
tests/data/: mulInverse_unsat.smt2  mulOne_unsat.smt2  mulZero_sat.smt2  plusInverse_sat.smt2  plusNeqInverse_sat.smt2  plusZero_unsat.smt2
tests/data/regression/: bouncing-ball-node5810.smt2
